tests/fixtures/invalid/none_gt_bytes.py
# Cannot compare with > None and Bytes
x: bool = None > b"hello"
